// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BorderlineSubstancesRootPage Body Single level should match snapshot 1`] = `
<div>
  <main>
    <div
      class="container"
    >
      <nav
        aria-label="Breadcrumbs"
        role="navigation"
      >
        <ol
          class="breadcrumbs"
        >
          <li
            class="breadcrumbs__crumb"
          >
            <a
              href="https://www.nice.org.uk/"
            >
              NICE
            </a>
          </li>
          <li
            class="breadcrumbs__crumb"
          >
            <a
              href="/"
            >
              BNF
            </a>
          </li>
          <li
            class="breadcrumbs__crumb"
          >
            <a
              href="/borderline-substances/"
            >
              Borderline substances
            </a>
          </li>
          <li
            class="breadcrumbs__crumb"
          >
            <span>
              Specialised formulas
            </span>
          </li>
        </ol>
      </nav>
      <script
        type="application/ld+json"
      >
        {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "https://www.nice.org.uk/",
        "name": "NICE"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/",
        "name": "BNF"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/borderline-substances/",
        "name": "Borderline substances"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Specialised formulas"
      }
    }
  ]
}
      </script>
      <div
        class="page-header"
        id="content-start"
      >
        <h1
          class="page-header__heading"
        >
          Specialised formulas
        </h1>
      </div>
      <div
        class="grid grid--loose"
        data-testid="body"
      >
        <div
          class="hide-print"
          data-g="12 md:4 lg:3"
        >
          <nav
            aria-label="Borderline substances"
            class="stacked-nav"
          >
            <p
              class="stacked-nav__root"
            >
              <a
                aria-current="false"
                href="/borderline-substances/"
              >
                Borderline substances
              </a>
            </p>
            <ul
              class="stacked-nav__list"
            >
              <li
                class="stacked-nav__list-item"
              >
                <a
                  aria-current="false"
                  href="/borderline-substances/enteral-feeds-non-disease-specific/"
                >
                  <span
                    class="stacked-nav__content-wrapper"
                  >
                    <span>
                      Enteral feeds (non-disease specific)
                    </span>
                  </span>
                </a>
              </li>
              <li
                class="stacked-nav__list-item"
              >
                <a
                  aria-current="true"
                  href="/borderline-substances/specialised-formulas/"
                >
                  <span
                    class="stacked-nav__content-wrapper"
                  >
                    <span>
                      Specialised formulas
                    </span>
                  </span>
                </a>
              </li>
              <li
                class="stacked-nav__list-item"
              >
                <a
                  aria-current="false"
                  href="/borderline-substances/foods-for-special-diets/"
                >
                  <span
                    class="stacked-nav__content-wrapper"
                  >
                    <span>
                      Foods for special diets
                    </span>
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          data-g="12 md:8 lg:9"
        >
          <ol
            aria-label="Sections within Specialised formulas"
            class="column-list column-list--boxed column-list--two-columns"
          >
            <li>
              <a
                href="/borderline-substances/specialised-formulas/specialised-formulas-for-specific-clinical-conditions/"
              >
                Specialised formulas for specific clinical conditions
              </a>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`BorderlineSubstancesRootPage Body Two levels should match snapshot 1`] = `
<div>
  <main>
    <div
      class="container"
    >
      <nav
        aria-label="Breadcrumbs"
        role="navigation"
      >
        <ol
          class="breadcrumbs"
        >
          <li
            class="breadcrumbs__crumb"
          >
            <a
              href="https://www.nice.org.uk/"
            >
              NICE
            </a>
          </li>
          <li
            class="breadcrumbs__crumb"
          >
            <a
              href="/"
            >
              BNF
            </a>
          </li>
          <li
            class="breadcrumbs__crumb"
          >
            <a
              href="/borderline-substances/"
            >
              Borderline substances
            </a>
          </li>
          <li
            class="breadcrumbs__crumb"
          >
            <span>
              Foods for special diets
            </span>
          </li>
        </ol>
      </nav>
      <script
        type="application/ld+json"
      >
        {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "https://www.nice.org.uk/",
        "name": "NICE"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/",
        "name": "BNF"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/borderline-substances/",
        "name": "Borderline substances"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Foods for special diets"
      }
    }
  ]
}
      </script>
      <div
        class="page-header"
        id="content-start"
      >
        <h1
          class="page-header__heading"
        >
          Foods for special diets
        </h1>
      </div>
      <div
        class="grid grid--loose"
        data-testid="body"
      >
        <div
          class="hide-print"
          data-g="12 md:4 lg:3"
        >
          <nav
            aria-label="Borderline substances"
            class="stacked-nav"
          >
            <p
              class="stacked-nav__root"
            >
              <a
                aria-current="false"
                href="/borderline-substances/"
              >
                Borderline substances
              </a>
            </p>
            <ul
              class="stacked-nav__list"
            >
              <li
                class="stacked-nav__list-item"
              >
                <a
                  aria-current="false"
                  href="/borderline-substances/enteral-feeds-non-disease-specific/"
                >
                  <span
                    class="stacked-nav__content-wrapper"
                  >
                    <span>
                      Enteral feeds (non-disease specific)
                    </span>
                  </span>
                </a>
              </li>
              <li
                class="stacked-nav__list-item"
              >
                <a
                  aria-current="false"
                  href="/borderline-substances/specialised-formulas/"
                >
                  <span
                    class="stacked-nav__content-wrapper"
                  >
                    <span>
                      Specialised formulas
                    </span>
                  </span>
                </a>
              </li>
              <li
                class="stacked-nav__list-item"
              >
                <a
                  aria-current="true"
                  href="/borderline-substances/foods-for-special-diets/"
                >
                  <span
                    class="stacked-nav__content-wrapper"
                  >
                    <span>
                      Foods for special diets
                    </span>
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          data-g="12 md:8 lg:9"
        >
          <section
            aria-labelledby="gluten-free-foods"
          >
            <h2
              class="firstHeading"
              id="gluten-free-foods"
            >
              Gluten-free foods
            </h2>
            <ol
              aria-label="Sections within Gluten-free foods"
              class="column-list column-list--boxed column-list--two-columns"
            >
              <li>
                <a
                  href="/borderline-substances/foods-for-special-diets/bread/"
                >
                  Bread
                </a>
              </li>
              <li>
                <a
                  href="/borderline-substances/foods-for-special-diets/cereals/"
                >
                  Cereals
                </a>
              </li>
            </ol>
          </section>
          <section
            aria-labelledby="low-protein-foods"
          >
            <h2
              id="low-protein-foods"
            >
              Low-protein foods
            </h2>
            <ol
              aria-label="Sections within Low-protein foods"
              class="column-list column-list--boxed column-list--two-columns"
            >
              <li>
                <a
                  href="/borderline-substances/foods-for-special-diets/bread-2/"
                >
                  Bread
                </a>
              </li>
              <li>
                <a
                  href="/borderline-substances/foods-for-special-diets/cake-biscuits-and-snacks/"
                >
                  Cake, biscuits, and snacks
                </a>
              </li>
            </ol>
          </section>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`BorderlineSubstancesRootPage should match snapshot for graphql query 1`] = `
"
	query ($id: String) {
		bnfBorderlineSubstancesTaxonomyRoot(id: { eq: $id }) {
			taxonomy {
				slug
				title
				childTaxonomies {
					title
					slug
					childTaxonomies {
						title
						slug
						childTaxonomies {
							title
							slug
						}
					}
				}
			}
		}
	}
"
`;
